force-app/main/default/objects/leaseworks__Aircraft_Optimization__c/leaseworks__Aircraft_Optimization__c.object-meta.xml
<CustomObject>
    <label>Aircraft Optimization</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aircraft Optimization</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>