force-app/main/default/objects/leaseworks__Aircraft_Optimization__c/fields/leaseworks__Analysis_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Analysis_Type__c</fullName>
    <label>Analysis Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sell vs Hold</fullName>
            </value>
            <value>
                <fullName>Value to Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>