force-app/main/default/objects/leaseworks__Aircraft_Optimization__c/fields/leaseworks__Ascend_FLCMV__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Ascend_FLCMV__c</fullName>
    <label>Ascend FLCMV ($M)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>