force-app/main/default/objects/leaseworks__Aircraft_Optimization__c/fields/leaseworks__Date_of_Analysis__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_of_Analysis__c</fullName>
    <label>Date of Analysis</label>
    <required>true</required>
    <type>Date</type>
</CustomField>