force-app/main/default/objects/leaseworks__Aircraft_Optimization__c/fields/leaseworks__Income_Statement_Impact__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Income_Statement_Impact__c</fullName>
    <formula>leaseworks__GAAP_Gain_Loss_on_Sale__c -  leaseworks__EBT_of_Lease__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Income Statement Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>