force-app/main/default/objects/leaseworks__Aircraft_Optimization__c/fields/leaseworks__IRR1_Total_Value__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__IRR1_Total_Value__c</fullName>
    <formula>leaseworks__IRR_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>0% IRR Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>