force-app/main/default/objects/leaseworks__Aircraft_Optimization__c/fields/leaseworks__IRR_At_Sale_Date_NBV_To_Trading_Value__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__IRR_At_Sale_Date_NBV_To_Trading_Value__c</fullName>
    <label>IRR At Sale Date NBV To Trading Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>