force-app/main/default/objects/leaseworks__Aircraft_Optimization__c/fields/leaseworks__Lease_Expiry__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_Expiry__c</fullName>
    <label>Lease Expiry</label>
    <type>Date</type>
</CustomField>