force-app/main/default/objects/leaseworks__Aircraft_Optimization__c/fields/leaseworks__Lease_Start__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_Start__c</fullName>
    <label>Lease Start</label>
    <type>Date</type>
</CustomField>