force-app/main/default/objects/leaseworks__Aircraft_Optimization__c/fields/leaseworks__Maturity_on_IRR_1__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maturity_on_IRR_1__c</fullName>
    <label>Maturity on 0% IRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>