force-app/main/default/objects/leaseworks__Aircraft_Optimization__c/fields/leaseworks__NPV__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__NPV__c</fullName>
    <label>NPV of Cash Flows</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>