force-app/main/default/objects/leaseworks__Aircraft_Optimization__c/fields/leaseworks__Primary__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary?</label>
    <type>Checkbox</type>
</CustomField>