force-app/main/default/objects/leaseworks__Aircraft_Optimization__c/fields/leaseworks__Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent__c</fullName>
    <label>Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>