force-app/main/default/objects/leaseworks__Aircraft_Optimization__c/fields/leaseworks__Residual_Value_on_IRR_1__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Residual_Value_on_IRR_1__c</fullName>
    <label>Residual Value needed for 0% IR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>