force-app/main/default/objects/leaseworks__Aircraft_Optimization__c/fields/leaseworks__Return_Compensation_Taken_into_Income_2__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Return_Compensation_Taken_into_Income_2__c</fullName>
    <label>Return Compensation Taken into Income 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>