force-app/main/default/objects/leaseworks__Aircraft_Optimization__c/fields/leaseworks__Total_Cash_Flows__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Cash_Flows__c</fullName>
    <formula>(( leaseworks__Aircraft_Trading_Value__c +  leaseworks__Total_Proceeds__c + leaseworks__Reserves_taken_into_Income_1__c +  leaseworks__Return_Compensation_Taken_into_Income_1__c ) -  leaseworks__Debt_Payoff_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cash Flows</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>