force-app/main/default/objects/leaseworks__Aircraft_Optimization__c/fields/leaseworks__Total_Proceeds__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Proceeds__c</fullName>
    <label>Total Proceeds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>