force-app/main/default/objects/leaseworks__Aircraft_Optimization__c/fields/leaseworks__Value_Per_Ascend_Blend__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Value_Per_Ascend_Blend__c</fullName>
    <label>Value Per Ascend Blend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>