force-app/main/default/objects/leaseworks__Aircraft_Optimization__c/fields/leaseworks__Y_Hidden_Aircraft_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Aircraft_Type__c</fullName>
    <formula>text(leaseworks__Aircraft__r.leaseworks__Asset_Type_GP__c)</formula>
    <label>{Aircraft Type}</label>
    <type>Text</type>
</CustomField>